04-flex-information: learned to combine many flex boxes and used flex direction to ensure that items are aligned correctly

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,25 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.plants {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+}
+
+.info {
+  display: flex;
+  gap: 52px;
+}
+
+.text {
+  text-align: center;
 }
 
 img {
